# databricks_mcp_claude_desktop

./: .env.example  .gitignore  CLAUDE.md  Data_Agent_Implementation.docx  Dockerfile  README.md  pyproject.toml
config/: settings.json
src/: server.py  sse_server.py
